thêm biểu đồ
